# fastapi-backend-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  init_db.py  init_superuser.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: ae9163cce3b5_initial_migration.py
app/: deps.py  main.py
app/apis/: user.py
app/user/: __init__.py  api.py
apps/: deps.py  main.py  routers.py
apps/alembic/: env.py
apps/alembic/versions/: 212547f34cb9_update_users.py  21c02549fa19_update_user_table.py  ae9163cce3b5_initial_migration.py
apps/apis/: __init__.py  login.py  user.py
apps/core/: resp.py  security.py  settings.py  state.py
apps/crud/: user.py
apps/models/: user.py
apps/tests/: conftest.py
apps/tests/crud/: test_user.py
common/: execptions.py  middleware.py  resp.py  state.py
core/: execptions.py  resp.py  security.py  settings.py  utils.py
crud/: user.py
models/: __init__.py  user.py
scripts/: init_superuser.py
tests/: conftest.py
tests/app/apis/: test_user.py
